# PineconeExperiment

./: .gitignore  .pre-commit-config.yaml  Makefile.txt  README.md  embedding.pt  encode_img.py  main.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  trial.py
.github/workflows/: action.yml  perform_pre_commit.yml  perform_tests.yml
data/: openfile.py  openimages.py
embedding/: encode_img.py
large_files/: openfile.py  openimages.py
src/: database_functions.py  download_dataset.py  embedding.py  extract.py  visualization.py
src/crawler/: crawler.py
src/database_functions/: database_functions.py
src/embedding/: embedding.py  encode_img.py
src/extract/: extract.py
src/visualization/: visualization.py
tests/: encoder_test.py  imagenette2-160.tgz  test_chunking.py  test_connection.py  test_download_dataset.py  test_embedding.py  test_encoder.py  test_extract.py  test_settings.py
