[tool.poetry]
name = "pineconeexperiment"
version = "0.1.0"
description = "An experiment with the pinecone database. Current goal is to do a simple similarity search with imagenet and the imagenette2 database"
authors = ["FRRitsma <folkert.ritsma@xomnia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pinecone-client = "^2.2.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
pandas = "^2.0.1"
matplotlib = "^3.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
